--- a/Project/Client/Views/User/PasswordSecurity.cshtml
+++ b/Project/Client/Views/User/PasswordSecurity.cshtml
@@ -1,38 +1,68 @@
-﻿@model Client.Models.AuthenModel.ChangePasswordModel
+﻿@using System.Security.Claims
+@model Client.Models.AuthenModel.ChangePasswordModel
+@{
+    var avatar = User.Claims.FirstOrDefault(a => a.Type == "Avatar")?.Value;
+    var email = @User.Claims.FirstOrDefault(a => a.Type == ClaimTypes.Email)?.Value;
+    var displayName = @User.Claims.FirstOrDefault(a => a.Type == ClaimTypes.GivenName)?.Value;
+    var username = @User.Claims.FirstOrDefault(a => a.Type == ClaimTypes.Name)?.Value;
+}
+
+
+<style>
+    .bt {
+        background-color: #f8f9fa;
+        color: #6c757d;
+        border: none;
+        border-radius: 10px;
+        margin-top: 2px;
+        width: 100%;
+        text-align: left;
+        padding: 10px;
+    }
+</style>
+
 
 <div class="main">
     <div class="row justify-content-center">
         <div class="col-md-3 p-3">
             <div class="d-flex align-items-center mb-3 p-2 rounded border border-1">
-                @*                 <img src="@Model.Avatar" class="rounded me-3" alt="Avatar" style="width:80px; height:80px;" />
+                <img src="@avatar" class="rounded me-3" alt="Avatar" style="width:80px; height:80px;" />
                 <div class="d-flex flex-column text-truncate">
-                <h5 class="mb-0">@Model.DisplayName</h5>
-                <p class="mb-0 text-muted" title="@Model.Email">@Model.Email</p>
-                <p class="mb-0 text-muted" title="@Model.PhoneNumber"> @Model.PhoneNumber</p>
-                </div> *@
+                    <h5 class="mb-0" title="@displayName">@displayName</h5>
+                    <p class="mb-0 text-muted" title="@username">@username</p>
+                    <p class="mb-0 text-muted" title="@email">@email</p>
+                </div>
             </div>
 
             <!-- Danh Muc -->
             <div class="nav flex-column">
                 <div class="custom-nav-item">
-                    <button type="button">
-                        <i class="fas fa-user"></i> User information
-                    </button>
+                    <a asp-action="Information" asp-controller="User">
+                        <button >
+                            <i class="fas fa-user"></i> User information
+                        </button>
+                    </a>
                 </div>
                 <div class="custom-nav-item">
-                    <button type="button">
-                        <i class="fas fa-lock"></i> Password and Security
-                    </button>
+                    <a asp-action="PasswordSecurity" asp-controller="User">
+                        <button >
+                            <i class="fas fa-lock"></i> Password and Security
+                        </button>
+                    </a>
                 </div>
                 <div class="custom-nav-item">
-                    <button type="button">
-                        <i class="fas fa-heart"></i> Wishlist
-                    </button>
+                    <a>
+                        <button>
+                            <i class="fas fa-heart"></i> Wishlist
+                        </button>
+                    </a>
                 </div>
                 <div class="custom-nav-item">
-                    <button type="button">
-                        <i class="fas fa-heart"></i> Logout
-                    </button>
+                    <a asp-action="Logout" asp-controller="User">
+                        <button >
+                            <i class="fas fa-heart"></i> Logout
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -43,28 +73,45 @@
             </div>
             <hr />
             <!-- Đổi email và mật khẩu -->
-            <form class="password-form" asp-action="ChangePassword">
+            <form class="password-form" asp-action="PasswordSecurity">
+
+                @if (TempData["success"] != null)
+                {
+                    <div class="alert alert-success">
+                        @TempData["success"]
+                    </div>
+                }
+
+                @if (TempData["error"] != null)
+                {
+                    <div class="alert alert-danger">
+                        @TempData["error"]
+                    </div>
+                }
 
                 <div class="form-group row mt-4">
                     <label for="password" class="col-md-3">Old Password</label>
                     <div class="col-md-6">
-                        <input type="password" id="password" class="form-control" asp-for=@Model.OldPassword value="***********"  />
+                        <input type="password" id="password" class="form-control" asp-for=@Model.OldPassword />
+                        <span class="text-danger" asp-validation-for="OldPassword"></span>
                     </div>
                     <div class="col-md-3">
-                        <button class="btn btn-success">Save</button>
+                        <button class="btn btn-success" type="submit">Save</button>
                     </div>
                 </div>
 
                 <div class="form-group row mt-4">
                     <label for="password" class="col-md-3">New Password</label>
                     <div class="col-md-6">
-                        <input type="password" id="password" class="form-control" asp-for=@Model.NewPassword value="***********"  />
+                        <input type="password" id="password" class="form-control" asp-for=@Model.NewPassword />
+                        <span class="text-danger" asp-validation-for="NewPassword"></span>
                     </div>
                 </div>
                 <div class="form-group row mt-4">
                     <label for="password" class="col-md-3">Confirm Password</label>
                     <div class="col-md-6">
-                        <input type="password" id="password" class="form-control" asp-for=@Model.ConfirmPassword value="***********"  />
+                        <input type="password" id="password" class="form-control" asp-for=@Model.ConfirmPassword />
+                        <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
                     </div>
                 </div>
 
