--- a/Project/Client/Views/User/ResetPassword.cshtml
+++ b/Project/Client/Views/User/ResetPassword.cshtml
@@ -2,16 +2,18 @@
     Layout = "_LayoutNull";
 }
 @using Client.Models.AuthenModel
-@model ForgotPasswordModel
-
-
+@model ResetPasswordModel
+@{
+    var userId = ViewData["UserId"];
+    var token = ViewData["Token"];
+}
 <div class="login-container" style="height:100vh;">
     <div class="login-box">
        
         <div class="login-logo">
             <a asp-controller="Home" asp-action="Index"><img src="~/image/logo.png" alt="Logo" /></a>
         </div>
-        <h2 class="login-title">Forgot Password</h2>
+        <h2 class="login-title">Reset Password</h2>
         @if (TempData["success"] != null)
         {
             <div class="alert alert-success">
@@ -25,13 +27,21 @@
                 @TempData["error"]
             </div>
         }
-        <form asp-action="ForgotPassword">
+        <form asp-action="ResetPassword">
+            <input hidden asp-for=Token type="text"/>
             <div class="login-input input-group">
                 <span class="input-group-text">
                     <i class="bi bi-person"></i>
                 </span>
-                <input asp-for="@Model.Email" type="text" class="form-control" placeholder="Email" >
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <input asp-for="@Model.NewPassword" type="text" class="form-control" placeholder="New password">
+                <span asp-validation-for="NewPassword" class="text-danger"></span>
+            </div> 
+            <div class="login-input input-group">
+                <span class="input-group-text">
+                    <i class="bi bi-person"></i>
+                </span>
+                <input asp-for="@Model.ConfirmPassword" type="text" class="form-control" placeholder="Confirm password">
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <button type="submit" class="login-btn fw-bold">Continue</button>
         </form>
