--- a/Project/Client/Views/Admin/UserDelete.cshtml
+++ b/Project/Client/Views/Admin/UserDelete.cshtml
@@ -5,7 +5,20 @@
 }
 @{
     Layout = "_LayoutAdmin";
+}@if (TempData["success"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["success"]
+    </div>
 }
+
+@if (TempData["error"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["error"]
+    </div>
+}
+
 <h1>UserDelete</h1>
 
 <h3>Are you sure you want to delete this user?</h3>
