--- a/Project/Client/Views/Admin/_OrderItemsPartial.cshtml
+++ b/Project/Client/Views/Admin/_OrderItemsPartial.cshtml
@@ -7,10 +7,27 @@
 @{ Layout = null; }
 @using Client.Models.OrderModel
 @model OrderViewModel
+
+
+
 <div class="modal fade" id="modalOrderDetail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="container-fluid p-5">
+                @if (TempData["success"] != null)
+                {
+                    <div class="alert alert-success">
+                        @TempData["success"]
+                    </div>
+                }
+
+                @if (TempData["error"] != null)
+                {
+                    <div class="alert alert-danger">
+                        @TempData["error"]
+                    </div>
+                }
+
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="row">
                     <form method="get" class="col" readonly>
