--- a/Project/Client/Views/Shared/_LayoutNull.cshtml
+++ b/Project/Client/Views/Shared/_LayoutNull.cshtml
@@ -143,7 +143,12 @@
             @RenderBody()
         </main>
     </div>
-
+    @await RenderSectionAsync("Scripts", required: false)
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
