--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -149,7 +149,7 @@
                                     <a class="navelement" asp-controller="User" asp-action="ChangePassword">ChangePassword</a>
                                     <a class="navelement" asp-controller="User" asp-action="Cart">Cart</a>
                                     <a class="navelement" asp-controller="Product" asp-action="ProductDetail">ProductDetail</a></>
-                                    <a class="navelement" asp-controller="product" asp-action="Collection">Collection</a>
+                                    <a class="navelement" asp-controller="Product" asp-action="Collection">Collection</a>
                                     <a class="navelement" asp-controller="Admin" asp-action="AdminDashboard">AdminDashboard</a>
                                     <a class="navelement" asp-controller="User" asp-action="EditProfile">EditProfile</a>
                                     <a class="navelement" asp-controller="User" asp-action="PasswordSecurity">Password&Security</a>
